added some css layout rules to improve appearance

--- a/turner_technical_assessment/ClientApp/src/index.css
+++ b/turner_technical_assessment/ClientApp/src/index.css
@@ -48,6 +48,24 @@ ul {
     color: white;
 }
 
+.details {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.details h2 {
+    color: tomato;
+}
+
 #redirect-button {
     text-align: center;
+}
+
+#header-link {
+    color: white;
+}
+
+#search-field {
+    width: 30%;
+    margin: 0 auto;
 }
